--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Mangata &amp; Gallo</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Mangata &amp; Gallo - luxury jewelry for engagements, weddings and special occasions.">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Mangata &amp; Gallo logo">
+    <img src="images/logo-primary.png" alt="Mangata &amp; Gallo logo">
   </header>
 
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
       <li><a href="#">Jewelry</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
@@ -30,19 +32,19 @@
 
     <section class="info-row">
       <article>
-        <img src="images/collection1.jpg" alt="Engagement rings collection">
+        <img src="images/logo-wordmark-dark.jpg" alt="Engagement rings collection">
         <h2>Engagement Rings</h2>
         <p>Classic and modern designs crafted with precision-cut diamonds.</p>
       </article>
 
       <article>
-        <img src="images/collection2.jpg" alt="Wedding bands collection">
+        <img src="images/logo-wordmark-dark.jpg" alt="Wedding bands collection">
         <h2>Wedding Bands</h2>
         <p>Matching bands that symbolize your story and lifelong commitment.</p>
       </article>
 
       <article>
-        <img src="images/collection3.jpg" alt="Custom jewelry design">
+        <img src="images/logo-wordmark-dark.jpg" alt="Custom jewelry design">
         <h2>Custom Designs</h2>
         <p>Work with Mariana to create a one-of-a-kind piece just for you.</p>
       </article>
@@ -51,11 +53,11 @@
 
   <footer>
     <div class="footer-left">
-      <img src="images/logo-small.png" alt="Mangata &amp; Gallo small logo">
+      <img src="images/logo-primary.png" alt="Mangata &amp; Gallo small logo">
     </div>
     <div class="footer-right">
       <p>&copy; 2025 Mangata &amp; Gallo. All rights reserved.</p>
     </div>
-  </footer>
+  </footer>  
 </body>
 </html>
